# AK_Lab2

./: CMakeLists.txt  Makefile
src/: calculator.cpp  calculator.h  main.cpp
